messing with nav bar color fixed z-index prob with mobile nav drop down

--- a/app/css/sticky-nav.css
+++ b/app/css/sticky-nav.css
@@ -1358,3 +1358,24 @@ background-color: #222;
 border-color: #080808;
 height: 63px;
 }
+
+.navLogo a img {
+    margin-bottom: 80px;
+    margin-top: 0px;
+}
+
+.nav ul li {
+    z-index: 2555006;
+}
+
+
+.navbar-wrap {
+
+z-index: 20;
+}
+
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+border-color: #101010;
+background-color: #3F9AB5;
+margin: 0px;
+}
